# bible-rag-assistant

./: README.md  VERSION_SUPPORT_IMPLEMENTATION.md  cli.py  debug_range_lookup.py  embed.py  pyproject.toml  test_db_direct.py
app/: main.py  rag_router.py
app/agents/: retriever_agent.py  task_router.py
data/: bible_cleaned.txt
db/: db.py  models.py  queries.sql
static/: app.js  index.html  presentation.html  presentation.js  style.css  styles.css  test-semantic.html
tests/: test_ai_structured.py  test_integration_next_presentation.py  test_next_endpoint.py
utils/: chunker.py  embedding.py  generate_embeddings.py  ingestion.py  query_validation.py  verify_ingestion.py
